helloapp-deployment/base/deployment-hello-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-1
  template:
    metadata:
      labels:
        app: hello-1
    spec:
      containers:
      - name: hello-1
        image: pepoolife/hello-1:latest
        ports:
        - containerPort: 8000
