helloapp-deployment/base/deployment-hello-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-2
  template:
    metadata:
      labels:
        app: hello-2
    spec:
      containers:
      - name: hello-2
        image: pepoolife/hello-2:latest
        ports:
        - containerPort: 8000
