helloapp-deployment/base/service-hello-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-1-service
spec:
  selector:
    app: hello-1
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
