helloapp-deployment/base/service-hello-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-2-service
spec:
  selector:
    app: hello-2
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
